--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>Morgan Selbekk</title>
+  <title>Ryan Belcher</title>
 
   <meta name="description" content="I'm a self taught Web Designer & Developer from London. I am currently working for a SaaS company called Zmags as a Solutions Engineer." />
 
@@ -28,7 +28,7 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-  <link rel="shortcut icon" href="https://res.cloudinary.com/mselbekk-com/image/upload/v1569173264/Group_ktxdlv.png" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="https://res.cloudinary.com/mselbekk-com/image/upload/v1569173264/Group_ktxdlv.png" type="image/x-icon" /> -->
 
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -115,7 +115,7 @@
       <br><br>
 
     
-      <h1 id="fade_in">Morgan Selbekk</h1>
+      <h1 id="fade_in">Ryan Belcher</h1>
       <h2 class="">Designer <span>/</span> Developer <span>/</span> </br> Ecommerce</h2>
       <div class="row below">
         <h5 class="header col s12">Hello<span class="emoji">👋</span>I'm a self taught web designer & developer from London. I am currently working for a SaaS company called <a href="https://zmags.com/" target="blank">Zmags</a> as a Solutions Engineer. My experience and interest lie within the Ecommerce space. Feel free to send me a message below!</h5>
@@ -170,7 +170,7 @@
 
 
 
-<div class="section no-pad-bot middle">
+<!-- <div class="section no-pad-bot middle">
 <div class="container middle">
   <div class="row">
 <div class="col s6 skills-left">
@@ -195,7 +195,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
   <footer class="page-footer">
