--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
       <h1 id="fade_in">Ryan Belcher</h1>
       <h2 class="">Designer <span>/</span> Developer <span>/</span> </br> Ecommerce</h2>
       <div class="row below">
-        <h5 class="header col s12">Hello<span class="emoji">👋</span>I'm a self taught web designer & developer from London. I am currently working for a SaaS company called <a href="https://zmags.com/" target="blank">Zmags</a> as a Solutions Engineer. My experience and interest lie within the Ecommerce space. Feel free to send me a message below!</h5>
+        <!-- <h5 class="header col s12">Hello<span class="emoji">👋</span>I'm a self taught web designer & developer from London. I am currently working for a SaaS company called <a href="https://zmags.com/" target="blank">Zmags</a> as a Solutions Engineer. My experience and interest lie within the Ecommerce space. Feel free to send me a message below!</h5> -->
       </div>
 
       <!-- <i class="em em-wave"></i> -->
 
-      <div class="row">
+      <!-- <div class="row">
 
           <a href="https://www.linkedin.com/in/morgan-christian-selbekk-a0617738/" target="blank">
            <svg width="40" height="40" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -158,7 +158,7 @@
                 <path class="cv" d="M15.33 23.48C15.33 22.7867 15.48 22.17 15.78 21.63C16.08 21.0833 16.4967 20.66 17.03 20.36C17.57 20.0533 18.18 19.9 18.86 19.9C19.6933 19.9 20.4067 20.12 21 20.56C21.5933 21 21.99 21.6 22.19 22.36H20.31C20.17 22.0667 19.97 21.8433 19.71 21.69C19.4567 21.5367 19.1667 21.46 18.84 21.46C18.3133 21.46 17.8867 21.6433 17.56 22.01C17.2333 22.3767 17.07 22.8667 17.07 23.48C17.07 24.0933 17.2333 24.5833 17.56 24.95C17.8867 25.3167 18.3133 25.5 18.84 25.5C19.1667 25.5 19.4567 25.4233 19.71 25.27C19.97 25.1167 20.17 24.8933 20.31 24.6H22.19C21.99 25.36 21.5933 25.96 21 26.4C20.4067 26.8333 19.6933 27.05 18.86 27.05C18.18 27.05 17.57 26.9 17.03 26.6C16.4967 26.2933 16.08 25.87 15.78 25.33C15.48 24.79 15.33 24.1733 15.33 23.48ZM29.8272 19.98L27.3372 27H25.1972L22.7072 19.98H24.5272L26.2672 25.28L28.0172 19.98H29.8272Z" fill="#272727"/>
                 </svg>
             </a>
-      </div>
+      </div> -->
       <br><br>
 <!--Here-->
     </div>
